@@ -1,7 +1,8 @@
 /*
   mysqlfs - MySQL Filesystem
   Copyright (C) 2006 Tsukasa Hamano <code@cuspy.org>
-  $Id: query.c,v 1.15 2006/09/23 09:29:44 ludvigm Exp $
+  Copyright (C) 2006,2007 Michal Ludvig <michal@logix.cz>
+  $Id: query.c,v 1.16 2007/03/28 13:05:48 ludvigm Exp $
 
   This program can be distributed under the terms of the GNU GPL.
   See the file COPYING.
@@ -26,6 +27,35 @@
 #include "log.h"
 
 #define SQL_MAX 10240
+
+static inline int lock_inode(MYSQL *mysql, long inode)
+{
+    // TODO
+    return 0;
+}
+
+static inline int unlock_inode(MYSQL *mysql, long inode)
+{
+    // TODO
+    return 0;
+}
+
+static struct data_blocks_info *
+fill_data_blocks_info(struct data_blocks_info *info, size_t size, off_t offset)
+{
+    info->seq_first = offset / DATA_BLOCK_SIZE;
+    info->offset_first = offset % DATA_BLOCK_SIZE;
+
+    unsigned long  nr_following_blocks = ((info->offset_first + size) / DATA_BLOCK_SIZE);	
+    info->length_first = nr_following_blocks > 0 ? DATA_BLOCK_SIZE - info->offset_first : size;
+
+    info->seq_last = info->seq_first + nr_following_blocks;
+    info->length_last = (info->offset_first + size) % DATA_BLOCK_SIZE;
+    /* offset in last block (if it's a different one from the first block) 
+     * is always 0 */
+
+    return info;
+}
 
 int query_getattr(MYSQL *mysql, const char *path, struct stat *stbuf)
 {
@@ -121,7 +151,7 @@ int query_inode_full(MYSQL *mysql, const char *path, char *name, size_t name_len
 	     depth, depth, depth, 
 	     depth+1, depth+1, depth,
 	     sql_from, sql_where);
-    log_printf(LOG_D_OTHER, "SQL=%s\n", sql);
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
     ret = mysql_query(mysql, sql);
     if(ret){
         log_printf(LOG_ERROR, "ERROR: mysql_query()\n");
@@ -177,23 +207,41 @@ int query_truncate(MYSQL *mysql, const char *path, off_t length)
 {
     int ret;
     char sql[SQL_MAX];
+    struct data_blocks_info info;
+
+    fill_data_blocks_info(&info, length, 0);
 
     long inode = query_inode(mysql, path);
     if (inode < 0)
       return inode;
 
-    snprintf(sql, SQL_MAX,
-             "UPDATE inodes LEFT JOIN data ON inodes.inode = data.inode SET data=RPAD(data, %lld, '\\0'), size=%lld WHERE inodes.inode=%ld",
-             length, length, inode);
-    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+    lock_inode(mysql, inode);
 
-    ret = mysql_query(mysql, sql);
-    if(ret)
-      goto err_out;
+    snprintf(sql, SQL_MAX,
+             "DELETE FROM data_blocks WHERE inode=%ld AND seq > %ld",
+	     inode, info.seq_last);
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+    if ((ret = mysql_query(mysql, sql))) goto err_out;
+
+    snprintf(sql, SQL_MAX,
+             "UPDATE data_blocks SET data=RPAD(data, %zu, '\\0') "
+	     "WHERE inode=%ld AND seq=%ld",
+             info.length_last, inode, info.seq_last);
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+    if ((ret = mysql_query(mysql, sql))) goto err_out;
+
+    snprintf(sql, SQL_MAX,
+             "UPDATE inodes SET size=%lld WHERE inode=%ld",
+             length, inode);
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+    if ((ret = mysql_query(mysql, sql))) goto err_out;
+
+    unlock_inode(mysql, inode);
 
     return 0;
 
 err_out:
+    unlock_inode(mysql, inode);
     log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
     return ret;
 }
@@ -286,15 +334,6 @@ long query_mknod(MYSQL *mysql, const char *path, mode_t mode, dev_t rdev,
     if(ret)
       goto err_out;
 
-    if (alloc_data) {
-        snprintf(sql, SQL_MAX,
-                 "INSERT INTO data SET inode=%ld", new_inode_number);
-
-        log_printf(LOG_D_SQL, "sql=%s\n", sql);
-        ret = mysql_query(mysql, sql);
-        if (ret)
-          goto err_out;
-    }
     return new_inode_number;
 
 err_out:
@@ -418,11 +457,17 @@ int query_read(MYSQL *mysql, long inode, const char *buf, size_t size,
     char sql[SQL_MAX];
     MYSQL_RES* result;
     MYSQL_ROW row;
-    unsigned long length;
+    unsigned long length = 0L, copy_len, seq;
+    struct data_blocks_info info;
+    char *dst = (char *)buf;
+    char *src, *zeroes = alloca(DATA_BLOCK_SIZE);
 
+    fill_data_blocks_info(&info, size, offset);
+
+    /* Read all required blocks */
     snprintf(sql, SQL_MAX,
-             "SELECT SUBSTRING(data, %lld, %d) FROM data WHERE inode=%ld",
-             offset + 1, size, inode);
+             "SELECT seq, data, LENGTH(data) FROM data_blocks WHERE inode=%ld AND seq>=%lu AND seq <=%lu ORDER BY seq ASC",
+             inode, info.seq_first, info.seq_last);
 
     log_printf(LOG_D_SQL, "sql=%s\n", sql);
 
@@ -440,32 +485,85 @@ int query_read(MYSQL *mysql, long inode, const char *buf, size_t size,
         return -EIO;
     }
 
-    if(mysql_num_rows(result) != 1 && mysql_num_fields(result) != 1){
-        mysql_free_result(result);
-        return -EIO;
-    }
-    
+    /* This is a bit tricky as we support 'sparse' files now.
+     * It means not all requested blocks must exist in the
+     * database. For those that don't exist we'll return
+     * a block of \0 instead.  */
     row = mysql_fetch_row(result);
-    if(!row){
-        mysql_free_result(result);
-        return -EIO;
-    }
-    
-    length = mysql_fetch_lengths(result)[0];
-    memcpy((void*)buf, row[0], length);
+    memset(zeroes, 0L, DATA_BLOCK_SIZE);
+    for (seq = info.seq_first; seq<=info.seq_last; seq++) {
+        off_t row_seq = -1;
+	size_t row_len = DATA_BLOCK_SIZE;
+	char *data = zeroes;
 
+	if (row && (row_seq = atoll(row[0])) == seq) {
+	    data = row[1];
+	    row_len = atoll(row[2]);
+	}
+	    
+	if (seq == info.seq_first) {
+	    if (row_len < info.offset_first)
+	        goto go_away;
+
+	    copy_len = MIN(row_len - info.offset_first, info.length_first);
+	    src = data + info.offset_first;
+	} else if (seq == info.seq_last) {
+	    copy_len = MIN(info.length_last, row_len);
+	    src = data;
+	} else {
+	    copy_len = MIN(DATA_BLOCK_SIZE, row_len);
+	    src = data;
+	}
+
+	memcpy(dst, src, copy_len);
+	dst += copy_len;
+	length += copy_len;
+
+	if (row && row_seq == seq)
+	    row = mysql_fetch_row(result);
+    }
+
+go_away:
+    /* Read all remaining rows */
+    while (mysql_fetch_row(result));
     mysql_free_result(result);
 
     return length;
 }
 
-int query_write(MYSQL *mysql, long inode, const char *data, size_t size,
-                off_t offset)
+static int write_one_block(MYSQL *mysql, long inode,
+				 unsigned long seq,
+				 const char *data, size_t size,
+				 off_t offset)
 {
     MYSQL_STMT *stmt;
     MYSQL_BIND bind[1];
     char sql[SQL_MAX];
-    size_t current_size = query_size(mysql, inode);
+    size_t current_block_size = query_size_block(mysql, inode, seq);
+
+    /* Shortcut */
+    if (size == 0) return 0;
+
+    if (offset + size > DATA_BLOCK_SIZE) {
+        log_printf(LOG_ERROR, "%s(): offset(%zu)+size(%zu)>max_block(%d)\n", 
+		   __func__, offset, size, DATA_BLOCK_SIZE);
+	return -EIO;
+    }
+
+    /* We expect the inode is already locked for this thread by caller! */
+
+    if (current_block_size == -ENXIO) {
+        /* This data block has not yet been allocated */
+        snprintf(sql, SQL_MAX,
+                 "INSERT INTO data_blocks SET inode=%ld, seq=%lu, data=''", inode, seq);
+        log_printf(LOG_D_SQL, "sql=%s\n", sql);
+        if(mysql_query(mysql, sql)){
+            log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
+            return -EIO;
+        }
+
+        current_block_size = query_size_block(mysql, inode, seq);
+    }
 
     stmt = mysql_stmt_init(mysql);
     if (!stmt)
@@ -475,27 +573,33 @@ int query_write(MYSQL *mysql, long inode, const char *data, size_t size,
     }
 
     memset(bind, 0, sizeof(bind));
-    if (offset == 0 && current_size == 0) {
+    if (offset == 0 && current_block_size == 0) {
         snprintf(sql, SQL_MAX,
-                 "UPDATE inodes LEFT JOIN data ON inodes.inode = data.inode SET data=?, size=%zu WHERE inodes.inode=%ld", size, inode);
-    } else if (offset == current_size) {
+                 "UPDATE data_blocks "
+		 "SET data=? "
+		 "WHERE inode=%ld AND seq=%lu",
+		 inode, seq);
+    } else if (offset == current_block_size) {
         snprintf(sql, sizeof(sql),
-                 "UPDATE inodes LEFT JOIN data ON inodes.inode = data.inode SET data=CONCAT(data, ?), size=size+%zu WHERE inodes.inode=%ld", size, inode);
+                 "UPDATE data_blocks "
+		 "SET data=CONCAT(data, ?) "
+		 "WHERE inode=%ld AND seq=%lu",
+		 inode, seq);
     } else {
         size_t pos, new_size;
         pos = snprintf(sql, sizeof(sql),
-		 "UPDATE inodes LEFT JOIN data ON inodes.inode = data.inode SET data=CONCAT(");
+		 "UPDATE data_blocks SET data=CONCAT(");
 	if (offset > 0)
 	    pos += snprintf(sql + pos, sizeof(sql) - pos, "RPAD(IF(ISNULL(data),'', data), %llu, '\\0'),", offset);
 	pos += snprintf(sql + pos, sizeof(sql) - pos, "?,");
 	new_size = offset + size;
-	if (offset + size < current_size) {
+	if (offset + size < current_block_size) {
 	    pos += snprintf(sql + pos, sizeof(sql) - pos, "SUBSTRING(data FROM %llu),", offset + size + 1);
-	    new_size = current_size;
+	    new_size = current_block_size;
 	}
 	sql[--pos] = '\0';	/* Remove the trailing comma. */
-	pos += snprintf(sql + pos, sizeof(sql) - pos, "), size=%zu WHERE inodes.inode=%ld",
-			new_size, inode);
+	pos += snprintf(sql + pos, sizeof(sql) - pos, ") WHERE inode=%ld AND seq=%lu",
+			inode, seq);
     }
     log_printf(LOG_D_SQL, "sql=%s\n", sql);
 
@@ -511,7 +615,7 @@ int query_write(MYSQL *mysql, long inode, const char *data, size_t size,
     bind[0].buffer_type= MYSQL_TYPE_LONG_BLOB;
     bind[0].buffer= (char *)data;
     bind[0].is_null= 0;
-    bind[0].length= (unsigned long *)&size;
+    bind[0].length= (unsigned long *)(void *)&size;
 
     if (mysql_stmt_bind_param(stmt, bind)) {
 	log_printf(LOG_ERROR, "mysql_stmt_bind_param() failed: %s\n", mysql_stmt_error(stmt));
@@ -533,6 +637,21 @@ int query_write(MYSQL *mysql, long inode, const char *data, size_t size,
     if (mysql_stmt_close(stmt))
 	log_printf(LOG_ERROR, "failed closing the statement: %s\n", mysql_stmt_error(stmt));
 
+    /* Update file size */
+    snprintf(sql, SQL_MAX,
+	     "UPDATE inodes SET size=("
+	     	"SELECT seq*%d + LENGTH(data) FROM data_blocks WHERE inode=%ld AND seq=("
+			"SELECT MAX(seq) FROM data_blocks WHERE inode=%ld"
+		")"
+	     ") "
+	     "WHERE inode=%ld",
+	     DATA_BLOCK_SIZE, inode, inode, inode);
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+    if(mysql_query(mysql, sql)) {
+        log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
+        return -EIO;
+    }
+
     return size;
 
 err_out:
@@ -542,7 +661,56 @@ err_out:
 	return -EIO;
 }
 
-size_t query_size(MYSQL *mysql, long inode)
+int query_write(MYSQL *mysql, long inode, const char *data, size_t size,
+                off_t offset)
+{
+    struct data_blocks_info info;
+    unsigned long seq;
+    const char *ptr;
+    int ret, ret_size = 0;
+
+    fill_data_blocks_info(&info, size, offset);
+
+    /* Handle first block */
+    lock_inode(mysql, inode);
+    ret = write_one_block(mysql, inode, info.seq_first, data,
+			  info.length_first, info.offset_first);
+    unlock_inode(mysql, inode);
+    if (ret < 0)
+        return ret;
+    ret_size = ret;
+
+    /* Shortcut - if last block seq is the same as first block
+     * seq simply go away as it's the same block */
+    if (info.seq_first == info.seq_last)
+        return ret_size;
+
+    ptr = data + info.length_first;
+
+    /* Handle all full-sized intermediate blocks */
+    for (seq = info.seq_first + 1; seq < info.seq_last; seq++) {
+        lock_inode(mysql, inode);
+        ret = write_one_block(mysql, inode, seq, ptr, DATA_BLOCK_SIZE, 0);
+        unlock_inode(mysql, inode);
+        if (ret < 0)
+            return ret;
+	ptr += DATA_BLOCK_SIZE;
+	ret_size += ret;
+    }
+
+    /* Handle last block */
+    lock_inode(mysql, inode);
+    ret = write_one_block(mysql, inode, info.seq_last, ptr,
+			  info.length_last, 0);
+    unlock_inode(mysql, inode);
+    if (ret < 0)
+        return ret;
+    ret_size += ret;
+
+    return ret_size;
+}
+
+ssize_t query_size(MYSQL *mysql, long inode)
 {
     size_t ret;
     char sql[SQL_MAX];
@@ -555,7 +723,7 @@ size_t query_size(MYSQL *mysql, long inode)
     ret = mysql_query(mysql, sql);
     if(ret){
         log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
-        return -1;
+        return -EIO;
     }
     log_printf(LOG_D_SQL, "sql=%s\n", sql);
 
@@ -563,17 +731,61 @@ size_t query_size(MYSQL *mysql, long inode)
     if(!result){
         log_printf(LOG_ERROR, "ERROR: mysql_store_result()\n");
         log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
-        return -1;
+        return -EIO;
     }
 
-    if(mysql_num_rows(result) != 1 && mysql_num_fields(result) != 1){
+    if(mysql_num_rows(result) != 1 || mysql_num_fields(result) != 1){
         mysql_free_result(result);
-        return -1;
+        return -EIO;
     }
 
     row = mysql_fetch_row(result);
     if(!row){
-        return -1;
+        return -EIO;
+    }
+
+    if(row[0]){
+        ret = atoll(row[0]);
+    }else{
+        ret = 0;
+    }
+    mysql_free_result(result);
+
+    return ret;
+}
+
+ssize_t query_size_block(MYSQL *mysql, long inode, unsigned long seq)
+{
+    size_t ret;
+    char sql[SQL_MAX];
+    MYSQL_RES *result;
+    MYSQL_ROW row;
+
+    snprintf(sql, SQL_MAX, "SELECT LENGTH(data) FROM data_blocks WHERE inode=%ld AND seq=%lu",
+             inode, seq);
+
+    ret = mysql_query(mysql, sql);
+    if(ret){
+        log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
+        return -EIO;
+    }
+    log_printf(LOG_D_SQL, "sql=%s\n", sql);
+
+    result = mysql_store_result(mysql);
+    if(!result){
+        log_printf(LOG_ERROR, "ERROR: mysql_store_result()\n");
+        log_printf(LOG_ERROR, "mysql_error: %s\n", mysql_error(mysql));
+        return -EIO;
+    }
+
+    if(mysql_num_rows(result) == 0) {
+        mysql_free_result(result);
+        return -ENXIO;
+    }
+
+    row = mysql_fetch_row(result);
+    if(!row){
+        return -EIO;
     }
 
     if(row[0]){
